# mlops-alcohol-classifier

./: .gcloudignore  .gitignore  README.md  cloudbuild.yaml  data.dvc  deploy_cloudrun.sh  deploy_frontend_cloudrun.sh  models.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docker.txt  tasks.py
.dvc/: config
.github/workflows/: Docker-build.yml  data-changes.yml  model-registry-changes.yml  tests.yml
api/: api.py  export_onnx.py  frontend.py  requirements_frontend.txt
checkpoints/: best.pt.dvc
configs/: run.yaml
configs/dataset/: dataset.yaml
configs/logger/: wandb.yaml
configs/model/: resnet.yaml
data/: processed.dvc  raw.dvc
dockerfiles/: Dockerfile  api.Dockerfile  frontend.Dockerfile
frontend/: frontend.py  requirements_frontend.txt
models/: ResNet-18 setup.py
outputs/2026-01-12/19-15-53/.hydra/: hydra.yaml
outputs/2026-01-12/19-23-51/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/19-26-48/.hydra/: hydra.yaml
outputs/2026-01-12/20-20-46/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/20-21-37/.hydra/: hydra.yaml
outputs/2026-01-12/20-24-42/.hydra/: hydra.yaml
outputs/2026-01-12/20-39-35/.hydra/: hydra.yaml
outputs/2026-01-12/20-53-28/.hydra/: hydra.yaml
outputs/2026-01-12/21-02-01/.hydra/: hydra.yaml
reports/: README.md  eval_metrics.json  train_metrics.json
src/alcohol_classifier/: api.py  data.py  drift_robustness.py  evaluate.py  export_onnx.py  model.py  train.py  utils.py  visualize.py
tests/: locustfile.py  test_api.py  test_data.py  test_model.py  test_train_step.py
(+58 files in other folders)
