[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alcohol_classifier"
version = "0.0.1"
description = "something somwthing"
authors = [
  { name = "Team 149", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*enablePackrat.*:DeprecationWarning",
  "ignore:.*parseString.*:DeprecationWarning",
  "ignore:.*resetCache.*:DeprecationWarning",
  "ignore:.*oneOf.*:DeprecationWarning",
]

